--- a/notebooks/other_analyses/test_natural_humanmade_labeling.ipynb
+++ b/notebooks/other_analyses/test_natural_humanmade_labeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7df62bb8",
+   "id": "3edb929c",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d98131a5",
+   "id": "2a60c7b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c430c24",
+   "id": "6f7c210c",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad26129b",
+   "id": "31d35c5e",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bcadebd8",
+   "id": "cfadba39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +156,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "540af969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label1 = np.array(coco_df['has_animate'])[:,np.newaxis]\n",
+    "label2 = (label1==0) & (has_label[:,np.newaxis])\n",
+    "labels = np.concatenate([label1, label2], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8bb8417b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9273"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.sum(labels, axis=1)==1, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "08ffca38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.357, 0.5703, 0.0727]\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "has_label = np.any(np.array(coco_df)[:,0:12]==1, axis=1)\n",
+    "has_animate = np.array(coco_df['has_animate'])==1\n",
+    "has_inanimate = ~has_animate & has_label\n",
+    "\n",
+    "print([np.mean(has_inanimate), np.mean(has_animate), np.mean(~has_animate & ~has_inanimate)])\n",
+    "print(np.sum([np.mean(has_inanimate), np.mean(has_animate), \\\n",
+    "              np.mean(~has_animate & ~has_inanimate)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
-   "id": "5f48eaa7",
+   "id": "8ef13e5a",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4781927a",
+   "id": "83fc2fc4",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "83752bf7",
+   "id": "db2fd3d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2051e58f",
+   "id": "59636c17",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8f5e8d0f",
+   "id": "e4f03a01",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "59cf7b23",
+   "id": "de16e1d8",
    "metadata": {
     "tags": []
    },
@@ -491,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ac70096c",
+   "id": "b7ff1ac8",
    "metadata": {
     "tags": []
    },
@@ -559,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ae3b4224",
+   "id": "a3e33cee",
    "metadata": {
     "tags": []
    },
