--- a/notebooks/plot_encoding_model_fits/plot_sketch_tokens.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_sketch_tokens.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bda7b4bd",
+   "id": "a828d012",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,57 +29,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3057133c",
+   "execution_count": 3,
+   "id": "6afa1ca9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading from /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Nov-27-2021_1805_34/all_fit_params\n",
-      "\n",
-      "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'corr_each_feature', 'discrim_each_axis', 'min_pct_var', 'max_pc_to_retain', 'use_pca_st_feats', 'use_lda_st_feats', 'lda_discrim_type'])\n",
-      "subject = 1\n",
-      "volume_space = 1\n",
-      "fitting_type = sketch_tokens\n",
-      "voxel_mask: shape (699192,)\n",
-      "brain_nii_shape: shape (3,)\n",
-      "image_order: shape (30000,)\n",
-      "voxel_index: len 1\n",
-      "voxel_roi: len 4\n",
-      "voxel_ncsnr: shape (699192,)\n",
-      "which_prf_grid = 5\n",
-      "models: shape (1456, 3)\n",
-      "best_losses: shape (19738, 1)\n",
-      "best_lambdas: shape (19738, 1)\n",
-      "best_params: len 6\n",
-      "lambdas: shape (9,)\n",
-      "val_cc: shape (19738, 1)\n",
-      "val_r2: shape (19738, 1)\n",
-      "partial_masks: shape (1, 150)\n",
-      "partial_version_names: len 1\n",
-      "zscore_features = True\n",
-      "zscore_in_groups = False\n",
-      "ridge = True\n",
-      "debug = 0\n",
-      "up_to_sess = 40\n",
-      "shuff_rnd_seed = 161827\n",
-      "use_precomputed_prfs = True\n",
-      "corr_each_feature: shape (19738, 150)\n",
-      "discrim_each_axis: shape (19738, 6)\n",
-      "min_pct_var = 95\n",
-      "max_pc_to_retain = 100\n",
-      "use_pca_st_feats = False\n",
-      "use_lda_st_feats = False\n",
-      "lda_discrim_type = None\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-ff3fd750be7a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m out, fig_save_folder = load_fits.load_fit_results(subject, volume_space, fitting_type, \\\n\u001b[0;32m---> 10\u001b[0;31m                                                   n_from_end=0, root=root, verbose=True);\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mload_fits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_output_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/user_data/mmhender/imStat/code/plotting/load_fits.py\u001b[0m in \u001b[0;36mload_fit_results\u001b[0;34m(subject, volume_space, fitting_type, n_from_end, root, verbose)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mmy_dates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"%b-%d-%Y_%H%M\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m# if n from end is not zero, then going back further in time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0mmost_recent_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_dates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mn_from_end\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0msubfolder2load\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolder2load\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmost_recent_date\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
     "# Load results of the fitting procedure\n",
     "\n",
-    "subject = 1\n",
+    "subject = 2\n",
     "volume_space=True\n",
     "fitting_type = 'sketch_tokens'\n",
     "# fitting_type='sketch_tokens_pca_max100dim'\n",
@@ -96,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "192b77f0",
+   "id": "e7938ffe",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "78b9a8dc",
+   "id": "ec8f6fe6",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f0c30686",
+   "id": "c429a982",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "982be69c",
+   "id": "5a6a3c63",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4fb9e5a6",
+   "id": "1fc11fa6",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e90dfcba",
+   "id": "14050131",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ee2261bb",
+   "id": "2dc20609",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cb6e5d9a",
+   "id": "ec68cd0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f66e2770",
+   "id": "828c6672",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b391c700",
+   "id": "ca5f4bde",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d8d7be64",
+   "id": "eeadd65c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6dd27671",
+   "id": "2444f9a8",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f83b9964",
+   "id": "27da6f1a",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a2b3c81",
+   "id": "7b01ffb5",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "166b8730",
+   "id": "235598d7",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "69bb503c",
+   "id": "2b02425e",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3bf65ff6",
+   "id": "880bec0a",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7e2c5b24",
+   "id": "486bc0b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "46768994",
+   "id": "f36e6e84",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "913b5883",
+   "id": "9e82dcff",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "41f416bf",
+   "id": "494fe626",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "31d362fa",
+   "id": "bf7e5077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6c2e4a0c",
+   "id": "76abcdb6",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "32bfe38f",
+   "id": "a6ff709c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e72cd052",
+   "id": "0809a7d9",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "aaf60c49",
+   "id": "e8c3009e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "c47fb205",
+   "id": "ac125609",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "22a34281",
+   "id": "6c875f3b",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e4105107",
+   "id": "06f9cb11",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b2feb9d4",
+   "id": "9a839dd7",
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d5e5d003",
+   "id": "7b961d25",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "38ffc64f",
+   "id": "3fcf47dc",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "931b2d45",
+   "id": "d90fedc4",
    "metadata": {},
    "outputs": [
     {
