updating jupyter notebooks

--- a/notebooks/plot_encoding_model_fits/plot_clip_plus_semantic.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_clip_plus_semantic.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a56cdca6",
+   "execution_count": 1,
+   "id": "89cab8f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2237db4d",
+   "execution_count": 2,
+   "id": "81d0b550",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading from /user_data/mmhender/imStat/model_fits/S01/clip_RN50_best_layer_pca_plus_semantic_all_supcat/Jan-03-2022_1653_34/all_fit_params\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S01/clip_RN50_best_layer_pca_plus_semantic_animacy/Dec-22-2021_1218_13/all_fit_params\n",
       "\n",
       "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'corr_each_feature', 'discrim_each_axis', 'semantic_discrim_type', 'clip_layer_name', 'clip_model_architecture', 'use_pca_clip_feats'])\n",
       "subject = 1\n",
@@ -65,14 +65,14 @@
       "ridge = True\n",
       "debug = 0\n",
       "up_to_sess = 40\n",
-      "shuff_rnd_seed = 21703\n",
+      "shuff_rnd_seed = 281222\n",
       "use_precomputed_prfs = True\n",
       "saved_prfs_fn = /user_data/mmhender/imStat/model_fits/S01/alexnet_all_conv_pca/Nov-23-2021_2247_09/all_fit_params\n",
       "best_layer_each_voxel: shape (19738,)\n",
       "saved_best_layer_fn = /user_data/mmhender/imStat/model_fits/S01/clip_RN50_all_resblocks_pca/Dec-12-2021_1407_50/all_fit_params\n",
-      "corr_each_feature: shape (19738, 112)\n",
+      "corr_each_feature: shape (19738, 101)\n",
       "discrim_each_axis: shape (19738, 6)\n",
-      "semantic_discrim_type = all_supcat\n",
+      "semantic_discrim_type = animacy\n",
       "clip_layer_name = \n",
       "clip_model_architecture = RN50\n",
       "use_pca_clip_feats = True\n"
@@ -85,7 +85,8 @@
     "subject = 1\n",
     "volume_space=True\n",
     "\n",
-    "semantic_discrim_type = 'all_supcat'\n",
+    "# semantic_discrim_type = 'all_supcat'\n",
+    "semantic_discrim_type = 'animacy'\n",
     "fitting_type = 'clip_RN50_best_layer_pca_plus_semantic_%s'%semantic_discrim_type\n",
     "\n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
@@ -99,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d59dcb0b",
+   "execution_count": 3,
+   "id": "bdbc93be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "df800396",
+   "id": "3a5627fc",
    "metadata": {},
    "outputs": [
     {
@@ -136,17 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "70f45484",
+   "execution_count": 4,
+   "id": "a0a96eef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(19738, 112, 3)"
+       "(19738, 101, 3)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,32 +158,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "ed0087dc",
+   "execution_count": 5,
+   "id": "26f831ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112),\n",
-       " (3, 112)]"
+       "[(3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101),\n",
+       " (3, 101)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,34 +195,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "d083fd94",
+   "execution_count": 8,
+   "id": "d220298a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0])"
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out['partial_masks'][0][1,:]"
+    "out['partial_masks'][0][2,:]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "820e64ef",
+   "id": "00a99db5",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b7bfc110",
+   "id": "12532c82",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5599acaa",
+   "id": "a75f05d1",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "06f300c1",
+   "id": "1af5e436",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7c9ccc29",
+   "id": "d61c635e",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4a2f04ab",
+   "id": "7797db6d",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96d10e78",
+   "id": "5ab209a1",
    "metadata": {
     "tags": []
    },
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ca542a1a",
+   "id": "1fc75471",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ad4497c1",
+   "id": "8dfa3934",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8ca1aad3",
+   "id": "2c5fa225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "042582bc",
+   "id": "15f6ba4c",
    "metadata": {},
    "outputs": [
     {
