updating jupyter notebooks

--- a/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "43bd0b08",
+   "execution_count": 1,
+   "id": "aba59c0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bd855ca9",
+   "execution_count": 3,
+   "id": "e60aee60",
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8fdbe535",
+   "execution_count": 5,
+   "id": "2701fda9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0000000e+00, 6.4989425e-02, 5.5234134e-01, 4.2069650e+00,\n",
+       "       3.1612776e+01, 2.3712738e+02, 1.7782694e+03, 1.3335204e+04,\n",
+       "       9.9999992e+04], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['lambdas']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2ccb797b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0000000e+00, 6.4989425e-02, 5.5234134e-01, 4.2069650e+00,\n",
+       "       3.1612776e+01, 2.3712738e+02, 1.7782694e+03, 1.3335204e+04,\n",
+       "       9.9999992e+04], dtype=float32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.logspace(np.log(0.01),np.log(100000),9, dtype=np.float32, base=np.e) - 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0d0d4851",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function ndarray.round>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.logspace(-6., 1., 9).astype(np.float64).round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c2b63a47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.01154674,  0.0364262 ,  0.09003332,  0.2055392 ,\n",
+       "        0.4544167 ,  0.9906665 ,  2.1461103 ,  4.635714  , 10.        ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.logspace(np.log(0.01),np.log(10**1+0.01),10, dtype=np.float32, base=np.e) - 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "49cd3e07",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "442f570b",
+   "id": "1461a807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6d480fc7",
+   "id": "3c94735a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d685f3b1",
+   "id": "5e3d55c4",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4ba00c55",
+   "id": "4903a4ef",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0165e268",
+   "id": "69afe514",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9e12c54f",
+   "id": "8deaa0f0",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "314ca4eb",
+   "id": "63146eb7",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b6290711",
+   "id": "cda37e1a",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "93a7e449",
+   "id": "d7e85b2f",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "26487570",
+   "id": "2cedc579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "13a0cdb0",
+   "id": "d9934b7a",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6b83be55",
+   "id": "e03b0df9",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eecd3e28",
+   "id": "4c390985",
    "metadata": {
     "tags": []
    },
@@ -527,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1c8e0e55",
+   "id": "6b7de18c",
    "metadata": {
     "tags": []
    },
@@ -589,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54753028",
+   "id": "09d7d9d1",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cd92efcf",
+   "id": "40a24e6f",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1acb2152",
+   "id": "940add60",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "24c07b47",
+   "id": "2c573808",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5c9d719b",
+   "id": "7e6203d9",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "43bffff9",
+   "id": "77c68f06",
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "81a71e28",
+   "id": "190ee6d3",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5b2b3c17",
+   "id": "1c1aa113",
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "04a32501",
+   "id": "450bcb75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "c9f7c21d",
+   "id": "27c2d574",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "d5ce212c",
+   "id": "6eb55ea9",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "bee88ea9",
+   "id": "65699caf",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d043036b",
+   "id": "399709ff",
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "592038c2",
+   "id": "6b1bf082",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "13654b47",
+   "id": "60c922c2",
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f95a7c7b",
+   "id": "21761fec",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "94965e4d",
+   "id": "18b940c1",
    "metadata": {},
    "outputs": [
     {
