--- a/notebooks/other_analyses/test_natural_humanmade_labeling.ipynb
+++ b/notebooks/other_analyses/test_natural_humanmade_labeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3edb929c",
+   "id": "081d414c",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2a60c7b2",
+   "id": "b0f116d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6f7c210c",
+   "id": "857da891",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "31d35c5e",
+   "id": "8ce31723",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cfadba39",
+   "id": "f5c1cc74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +156,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "fc9f4753",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cat_labels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4eb3803841a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcat_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cat_labels' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cat_labels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
-   "id": "540af969",
+   "id": "b1840745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8bb8417b",
+   "id": "3c941c6c",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "08ffca38",
+   "id": "85ee5271",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8ef13e5a",
+   "id": "8ec52c95",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83fc2fc4",
+   "id": "e393c93c",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "db2fd3d7",
+   "id": "743dc51e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "59636c17",
+   "id": "3f3d77d8",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e4f03a01",
+   "id": "486636fb",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "de16e1d8",
+   "id": "798db128",
    "metadata": {
     "tags": []
    },
@@ -549,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b7ff1ac8",
+   "id": "e4bc27dc",
    "metadata": {
     "tags": []
    },
@@ -617,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a3e33cee",
+   "id": "672dc379",
    "metadata": {
     "tags": []
    },
