updating jupyter notebooks

--- a/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_gabor_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aba59c0b",
+   "id": "f6cf3de1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e60aee60",
+   "execution_count": 2,
+   "id": "38af9c3e",
    "metadata": {},
    "outputs": [
     {
@@ -104,16 +104,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2701fda9",
+   "execution_count": 3,
+   "id": "3f4dcd60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.0000000e+00, 6.4989425e-02, 5.5234134e-01, 4.2069650e+00,\n",
-       "       3.1612776e+01, 2.3712738e+02, 1.7782694e+03, 1.3335204e+04,\n",
-       "       9.9999992e+04], dtype=float32)"
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.any(np.isnan(out['discrim_each_axis']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "48858d38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
       ]
      },
      "execution_count": 5,
@@ -122,13 +141,13 @@
     }
    ],
    "source": [
-    "out['lambdas']"
+    "np.any(np.isnan(out['corr_each_feature']))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2ccb797b",
+   "id": "6ef949af",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0d0d4851",
+   "id": "6897a84e",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c2b63a47",
+   "id": "9ede40f8",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "49cd3e07",
+   "id": "649c6b10",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1461a807",
+   "id": "a56d7358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3c94735a",
+   "id": "2e3840b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e3d55c4",
+   "id": "78975364",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4903a4ef",
+   "id": "7c3f94fc",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "69afe514",
+   "id": "5b7430c0",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8deaa0f0",
+   "id": "8a3a6364",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "63146eb7",
+   "id": "0dabafc3",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "cda37e1a",
+   "id": "11b2aa2b",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "d7e85b2f",
+   "id": "02e431b7",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2cedc579",
+   "id": "eea7d5dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9934b7a",
+   "id": "4a356f5c",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e03b0df9",
+   "id": "7ae150d9",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4c390985",
+   "id": "fc4cfcf3",
    "metadata": {
     "tags": []
    },
@@ -617,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6b7de18c",
+   "id": "6eff19dc",
    "metadata": {
     "tags": []
    },
@@ -679,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "09d7d9d1",
+   "id": "daa8d58c",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "40a24e6f",
+   "id": "7f48f04b",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "940add60",
+   "id": "b52f2898",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2c573808",
+   "id": "20585ef9",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7e6203d9",
+   "id": "772a9577",
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "77c68f06",
+   "id": "a69adf92",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "190ee6d3",
+   "id": "ccf55cd0",
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "1c1aa113",
+   "id": "c5223b5f",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "450bcb75",
+   "id": "07d048c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "27c2d574",
+   "id": "ef067b7b",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "6eb55ea9",
+   "id": "b77e79d8",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "65699caf",
+   "id": "bca63369",
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "399709ff",
+   "id": "3c668ff0",
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "6b1bf082",
+   "id": "a384f90a",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "60c922c2",
+   "id": "6778c659",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "21761fec",
+   "id": "4fafa4db",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "18b940c1",
+   "id": "585a9d06",
    "metadata": {},
    "outputs": [
     {
