--- a/notebooks/plot_encoding_model_fits/plot_semantic_model.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_semantic_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a4b1c320",
+   "id": "6593f961",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "04257428",
+   "id": "3fe8ea6b",
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,7 @@
     "\n",
     "subject = 1\n",
     "volume_space=True\n",
+    "# fitting_types = ['semantic_coco_things_supcateg']\n",
     "fitting_types = ['all_coco_categ']\n",
     "# fitting_types = ['all_coco']\n",
     "# fitting_types = ['semantic_coco_things_categ', 'semantic_coco_stuff_categ']\n",
@@ -78,8 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "092208ad",
+   "execution_count": 18,
+   "id": "9a16c594",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'window'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['discrim_type_list'][30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8e211b42",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +110,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9076ff9d",
+   "execution_count": 10,
+   "id": "0381f64d",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +134,7 @@
        "       False, False, False,  True])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,36 +145,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d835b4b6",
+   "execution_count": 12,
+   "id": "01170f63",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([False,  True, False, False,  True, False,  True,  True,  True,\n",
-       "        True,  True,  True,  True, False,  True,  True,  True,  True,\n",
-       "        True,  True, False,  True, False, False,  True,  True,  True,\n",
-       "        True, False,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True, False,  True,  True,  True,\n",
-       "       False, False,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True, False, False, False, False, False,  True,  True,\n",
-       "       False,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True, False,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True, False,  True, False, False, False,  True,  True,  True,\n",
-       "        True,  True,  True,  True, False,  True,  True, False,  True,\n",
-       "       False, False, False,  True,  True,  True,  True,  True, False,\n",
-       "        True, False,  True, False, False,  True, False, False, False,\n",
-       "        True,  True,  True, False,  True,  True,  True,  True,  True,\n",
-       "        True, False, False,  True, False, False,  True, False,  True,\n",
-       "        True, False, False, False,  True,  True,  True,  True, False,\n",
-       "        True, False, False, False,  True,  True, False,  True,  True,\n",
-       "       False,  True, False,  True, False,  True, False, False, False,\n",
-       "        True,  True, False, False, False,  True,  True,  True,  True,\n",
-       "        True])"
+       "(array([13, 16, 21, 30]),)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(np.any(np.isnan(out['discrim_each_axis']), axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0dc60a3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "       False,  True, False])"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "7eb608ec",
+   "execution_count": 3,
+   "id": "3ed5de72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4721b56f",
+   "id": "d78af5e8",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "29d99466",
+   "id": "f4f33eb0",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "02e3ab66",
+   "id": "3c9093a9",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0452964a",
+   "id": "80d55303",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d7a627b3",
+   "id": "88d0dcc1",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "da2b1a4e",
+   "id": "f67a25c5",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "19041a18",
+   "id": "c3074962",
    "metadata": {},
    "outputs": [
     {
@@ -412,8 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8e8ab18e",
+   "execution_count": 22,
+   "id": "4969399c",
    "metadata": {},
    "outputs": [
     {
@@ -429,8 +454,9 @@
      "output_type": "stream",
      "text": [
       "Data is in 3d volume space\n",
-      "navigate browser to: 127.0.0.1:63333\n",
-      "Started server on port 63333\n"
+      "navigate browser to: 127.0.0.1:13333\n",
+      "Started server on port 13333\n",
+      "Stopping server\n"
      ]
     }
    ],
@@ -439,7 +465,7 @@
     "\n",
     "import cortex\n",
     "\n",
-    "port=63333\n",
+    "port=13333\n",
     "\n",
     "vox2plot = outlist[0]['val_r2'][:,0]>-100\n",
     "\n",
@@ -463,8 +489,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "b6acdb81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data is in 3d volume space\n",
+      "navigate browser to: 127.0.0.1:13333\n",
+      "Started server on port 13333\n",
+      "Stopping server\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make plots in pycortex for variance partitioning analysis\n",
+    "\n",
+    "import cortex\n",
+    "\n",
+    "port=13333\n",
+    "\n",
+    "pp0 = 0\n",
+    "pp1 = 1\n",
+    "pp2 = 2\n",
+    "\n",
+    "name1 = out['partial_version_names'][pp1][5:]\n",
+    "name2 = out['partial_version_names'][pp2][5:]\n",
+    "val_r2 = out['val_r2']\n",
+    "ve_names = ['combined_model', 'unique: ' + name1, 'unique: ' + name2, 'shared']\n",
+    "shared_ab, unique_a, unique_b = stats_utils.get_shared_unique_var(val_r2[:,pp0], val_r2[:,pp1], val_r2[:,pp2])\n",
+    "\n",
+    "var_expl = np.concatenate((val_r2[:,pp0:pp0+1], unique_a[:,np.newaxis], unique_b[:,np.newaxis],shared_ab[:,np.newaxis]),axis=1)\n",
+    "\n",
+    "max_ind = np.argmax(var_expl[:,1:3], axis=1)\n",
+    "\n",
+    "maps = [max_ind+1] + [var_expl[:,fi] for fi in range(var_expl.shape[1])]\n",
+    "\n",
+    "names = ['Prefered feature type (based on unique var)'] + ve_names\n",
+    "\n",
+    "cmaps = ['plasma_r', 'PuBu', 'PuBu', 'PuBu', 'PuBu']\n",
+    "mins = [0,0,0,0,0]\n",
+    "maxes = [2, 0.4, 0.10, 0.10, 0.2]\n",
+    "\n",
+    "plot_utils.plot_maps_pycortex(maps, names, subject, out, roi_def=roi_def, fitting_type=fitting_type, \\\n",
+    "                              port=port, cmaps=cmaps, mins=mins, maxes=maxes)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
-   "id": "137fe4c4",
+   "id": "8ed0b0a7",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8c7bd7d5",
+   "id": "8e041ad3",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e7b25f89",
+   "id": "e74dbf78",
    "metadata": {},
    "outputs": [
     {
